syntax = "proto3";

import "nsolid.proto";

package grpcagent;

service NSolidService {
  rpc ReqRespStream (stream RuntimeResponse) returns (stream RuntimeRequest) {}
}